# tim-class-pass

./: .cursorignore  .env.template  .gitattributes  .gitignore  AUDIT_HANDOFF.md  InvalidationFilterTune.md  README.md  The Invalidation Filter.md  audit_bundle_identity.json  config.py  conftest.py  deduplicator.py  dense_analyzer.py  dense_capturer.py  downloader.py  frame_extractor.py  gap_detector.py  gemini_client.py  invalidatoinTune2.md  main.py  pipeline.yml  pyproject.toml  solution_strategy.md  stitcher.py  tim-class-pass.code-workspace  vlm_translator.py
.agent/: README.md
audit/: AUDIT_HANDOFF.md  ML_STEP5_HANDOFF.md  ML_STEP6_HANDOFF.md  README.md
audit_03/: git_diff.patch  pytest_output.txt
audit_03_v2/: git_diff.patch  pytest_output.txt
audit_step3_real/: pytest_output.txt  sample_manifest.json
audit_step3_real_v2/: pytest_output.txt  sample_manifest.json
audit_step3_reaudit/: pytest_output.txt  sample_manifest.json
audit_step4_1_bundle/: explorer_build_manifest.json  pytest_output.txt
audit_step4_1_bundle_rework2/: REAUDIT_COVER_NOTE.md
benchmark-reports/: benchmark_2026-03-09T23-46-17.json  benchmark_2026-03-09T23-50-04.json  benchmark_2026-03-09T23-51-16.json  benchmark_2026-03-09T23-57-02.json  benchmark_2026-03-09T23-58-08.json  benchmark_2026-03-10T00-00-00.json  benchmark_2026-03-10T00-00-44.json  benchmark_2026-03-10T00-01-56.json  benchmark_2026-03-10T12-34-19.json  benchmark_2026-03-10T12-36-02.json  benchmark_2026-03-10T12-53-24.json  benchmark_2026-03-10T13-59-55.json  benchmark_2026-03-10T14-04-56.json  benchmark_2026-03-10T14-09-51.json  benchmark_2026-03-10T14-55-28.json  benchmark_2026-03-10T15-38-25.json  benchmark_2026-03-10T16-09-02.json  benchmark_2026-03-10T20-52-01.json  benchmark_2026-03-10T21-04-02.json  benchmark_2026-03-10T21-17-22.json  benchmark_2026-03-11T11-50-45.json  benchmark_2026-03-11T12-38-07.json  benchmark_2026-03-11T12-40-16.json  payload_full.txt  payload_vision_ocr.json  payload_vision_strategy.json
browser_api_samples/: compare_lessons.json  compare_rules.json  concept_lessons_node_stop_loss.json  concept_rules_node_stop_loss.json  related_rules_rule_2025_09_29_sviatoslav_chornyi_rule_2025_09_29_sviatoslav_chornyi_trade_management_stop_loss_3.json  search_empty.json
corpurs-build/: 01.md  02.md
delay-llm/: 00-overview.md  02-paths-and-client.md  03-vision-batch.md  04-text-llm-batch.md  05-assembler.md  06-submit-poll.md  07-discovery-cli.md  08-testing.md  09-operations.md
docs/: FRAMEWORK_MODULES.md  README.md  RUN_BROWSER_API.md  benchmarking.md  corpus_contract_v1.md  deduplicator.md  framework_file_function_reference.md  gemini_api_usage_report.md  gemini_rate_limits.md  local_model_benchmark_guide.md  ml_step5_task_definition.md  ml_step6_label_generation.md  ml_step7_feature_store_and_baselines.md  ml_step8_walkforward_backtests.md  ml_step9_model_family_decision.md  model_selection_summary.md  operator_ui_implementation_plan.md  pipeline.md  pipeline_structure_and_features.md  rag_query_examples.md  rag_step3_conversation_summary.md  rag_step3_handoff.md  stage6_4_rule_browser.md  step2_corpus_build_notes.md  step3_hybrid_rag_notes.md  step4_explorer_contracts.md  step4_explorer_notes.md  trading_visual_extraction_spec.md  validation_frame591_report.md
helpers/: analyze.py  config.py  ffmpeg_cmd.py  usage_report.py
knowlage-tune-2/: 00-plan.md  03-phase1.md  07-phase2.md  08-phase2-implementation-plan.md  09-phase2.md  12-phase2.md  14-phase2.md  16-task10-implementation-note.md  16-task10.md  17-task10-implementation-note.md  17-task10.md  18-task10-implementation-note.md
knowlage_refactoring/: Task15-Summary.md  promt-improve.md  step_3_new_tune.md  task10.md  task11.md  task12.md  task13.md  task3.md  task4.md  task5.md  task6.md  task8.md
notes/: stage5_4_tier_policy.md
output_corpus/: concept_alias_registry.json  concept_frequencies.json  concept_overlap_report.json  concept_rule_map.json  corpus_concept_graph.json  corpus_evidence_index.jsonl  corpus_knowledge_events.jsonl  corpus_lessons.jsonl  corpus_metadata.json  corpus_rule_cards.jsonl  lesson_registry.json  rule_family_index.json  schema_versions.json  validation_report.json
output_rag/: rag_build_metadata.json  retrieval_docs_all.jsonl  retrieval_docs_concept_nodes.jsonl  retrieval_docs_concept_relations.jsonl  retrieval_docs_concepts.jsonl  (+3 more)
pipeline/: main.py  (+18 more)
(+1389 files in other folders)
